--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,11 @@
         android:id="@+id/navigation_home"
         android:name="com.example.fitnutrijournal.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_calendarFragment"
+            app:destination="@id/calendarFragment" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_diet"
         android:name="com.example.fitnutrijournal.ui.diet.DietFragment"
@@ -24,4 +28,8 @@
         android:name="com.example.fitnutrijournal.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/calendarFragment"
+        android:name="com.example.fitnutrijournal.ui.home.CalendarFragment"
+        android:label="CalendarFragment" />
 </navigation>
