--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#ECECEC</color>
+    <color name="calendar_today">#2ACC61</color>
+    <color name="calendar_date_select">#B3E2CD</color>
+    <color name="purple">#65558F</color>
+
 </resources>
