--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -8,8 +8,13 @@
         android:id="@+id/calendarDayText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="8dp"
+        android:background="@drawable/calendar_day_background"
         android:gravity="center"
         android:textSize="16sp"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="8dp"
         tools:text="22" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
