--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="calendar_today">#2ACC61</color>
     <color name="calendar_date_select">#B3E2CD</color>
     <color name="purple">#65558F</color>
+    <color name="out_of_month_color">#d1d1d1</color>
 
 </resources>
