--- a/app/src/main/res/layout/fragment_snack.xml
+++ b/app/src/main/res/layout/fragment_snack.xml
@@ -11,7 +11,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.home.Snack">
+        tools:context=".ui.home.detail.Snack">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
