--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.fitnutrijournal.viewmodel.HomeViewModel" />
@@ -63,8 +64,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/todaySummarySection"
-                    android:layout_width="380dp"
-                    android:layout_height="230dp"
+                    android:layout_width="0dp"
+                    android:layout_height="300dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="150dp"
                     android:layout_marginEnd="10dp"
@@ -82,71 +83,88 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tvCalorieIntake"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:gravity="center"
                         android:text='@{viewModel.currentCalories + "\n" + "섭취량"}'
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/circularProgressBar"
-                        app:layout_constraintHorizontal_bias="0.326"
+                        app:layout_constraintEnd_toStartOf="@+id/tvTargetCalories"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.40" />
 
                     <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/remainingCalories"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:gravity="center"
-                        android:text="0\n소비량"
-                        android:textSize="14dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.68"
-                        app:layout_constraintStart_toEndOf="@+id/circularProgressBar"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.40" />
-
-                    <ProgressBar
-                        android:id="@+id/circularProgressBar"
-                        style="@android:style/Widget.ProgressBar.Horizontal"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_centerInParent="true"
-                        android:indeterminate="false"
-                        android:max="@{viewModel.targetCalories}"
-                        android:progress="@{viewModel.currentCalories}"
-                        android:progressDrawable="@drawable/circular_progress_bar"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.15" />
-
-                    <TextView
-                        android:id="@+id/textView11"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
+                        android:maxLines="2"
                         android:text='@{viewModel.remainingCalories + "\n" + "잔여칼로리"}'
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintHorizontal_bias="0.68"
+                        app:layout_constraintStart_toEndOf="@+id/tvTargetCalories"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.40" />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/progressBarLayout"
+                        android:layout_width="175dp"
+                        android:layout_height="175dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:minHeight="175dp"
+                        app:layout_constraintBottom_toTopOf="@+id/textView13"
+                        app:layout_constraintEnd_toStartOf="@+id/remainingCalories"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toEndOf="@+id/tvCalorieIntake"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <ProgressBar
+                            android:id="@+id/circularProgressBar"
+                            style="@android:style/Widget.ProgressBar.Horizontal"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:indeterminate="false"
+                            android:max="@{viewModel.targetCalories}"
+                            android:progress="@{viewModel.currentCalories}"
+                            android:progressDrawable="@drawable/circular_progress_bar"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                    <TextView
+                        android:id="@+id/tvTargetCalories"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="70dp"
+                        android:layout_marginEnd="70dp"
+                        android:gravity="center"
+                        android:maxLines="2"
+                        android:text='@{viewModel.targetCalories + "\n" + "목표칼로리"}'
+                        android:textSize="14dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/remainingCalories"
+                        app:layout_constraintStart_toEndOf="@+id/tvCalorieIntake"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.40" />
 
                     <ProgressBar
                         android:id="@+id/carbProgressBar"
                         style="@android:style/Widget.ProgressBar.Horizontal"
-                        android:layout_width="60dp"
+                        android:layout_width="0dp"
                         android:layout_height="10dp"
                         android:layout_centerInParent="true"
                         android:layout_marginStart="20dp"
+                        android:layout_marginEnd="50dp"
                         android:max="@{viewModel.targetCarbIntake}"
                         android:progress="@{viewModel.currentCarbIntake}"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -158,9 +176,11 @@
 
                     <TextView
                         android:id="@+id/textView12"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
+                        android:layout_marginEnd="50dp"
+                        android:gravity="center"
                         android:text="탄수화물"
                         android:textSize="12dp"
                         app:layout_constraintBottom_toTopOf="@+id/carbProgressBar"
@@ -172,10 +192,11 @@
 
                     <TextView
                         android:id="@+id/tvCarb"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:gravity="start"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="50dp"
+                        android:gravity="center"
                         android:text='@{viewModel.currentCarbIntake + "/" + viewModel.targetCarbIntake + "g"}'
                         android:textSize="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -189,48 +210,50 @@
                     <ProgressBar
                         android:id="@+id/proteinProgressBar"
                         style="@android:style/Widget.ProgressBar.Horizontal"
-                        android:layout_width="60dp"
+                        android:layout_width="0dp"
                         android:layout_height="10dp"
                         android:layout_centerInParent="true"
                         android:max="@{viewModel.targetProteinIntake}"
                         android:progress="@{viewModel.currentProteinIntake}"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/fatProgressBar"
+                        app:layout_constraintStart_toEndOf="@+id/carbProgressBar"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.85" />
 
                     <TextView
                         android:id="@+id/textView13"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text="단백질"
                         android:textSize="12dp"
-                        app:layout_constraintBottom_toTopOf="@+id/proteinProgressBar"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.501"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/textView14"
+                        app:layout_constraintStart_toEndOf="@+id/textView12"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.95" />
+                        app:layout_constraintVertical_bias="0.763" />
 
                     <TextView
                         android:id="@+id/tvProtein"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text='@{viewModel.currentProteinIntake + "/" + viewModel.targetProteinIntake + "g"}'
                         android:textSize="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/tvFat"
+                        app:layout_constraintStart_toEndOf="@id/tvCarb"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.95" />
+                        app:layout_constraintVertical_bias="0.949" />
 
                     <ProgressBar
                         android:id="@+id/fatProgressBar"
                         style="@android:style/Widget.ProgressBar.Horizontal"
-                        android:layout_width="60dp"
+                        android:layout_width="0dp"
                         android:layout_height="10dp"
                         android:layout_centerInParent="true"
+                        android:layout_marginStart="50dp"
                         android:layout_marginEnd="20dp"
                         android:max="@{viewModel.targetFatIntake}"
                         android:progress="@{viewModel.currentFatIntake}"
@@ -243,23 +266,26 @@
 
                     <TextView
                         android:id="@+id/textView14"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="50dp"
                         android:layout_marginEnd="20dp"
+                        android:gravity="center"
                         android:text="지방"
                         android:textSize="12dp"
                         app:layout_constraintBottom_toTopOf="@+id/fatProgressBar"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.856"
                         app:layout_constraintStart_toEndOf="@+id/textView13"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.95" />
 
                     <TextView
                         android:id="@+id/tvFat"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="50dp"
+                        android:layout_marginEnd="20dp"
+                        android:gravity="center"
                         android:text='@{viewModel.currentFatIntake + "/" + viewModel.targetFatIntake + "g"}'
                         android:textSize="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -299,7 +325,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/todayDietSection"
-                    android:layout_width="380dp"
+                    android:layout_width="0dp"
                     android:layout_height="240dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="100dp"
@@ -552,7 +578,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/myExerciseRoutineSection"
-                    android:layout_width="380dp"
+                    android:layout_width="0dp"
                     android:layout_height="200dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="100dp"
@@ -590,7 +616,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/myActivitySection"
-                    android:layout_width="380dp"
+                    android:layout_width="0dp"
                     android:layout_height="200dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="100dp"
